feat: dotted background

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -42,8 +42,6 @@
 		]
 	},
 	"dependencies": {
-		"@threlte/core": "^8.3.1",
-		"@threlte/extras": "^9.7.1",
-		"three": "^0.182.0"
+		"lucide-svelte": "^0.562.0"
 	}
 }
